--- a/authstyles.css
+++ b/authstyles.css
@@ -5,15 +5,19 @@ html {
 body {
     height: 100%;
     margin: 0;
-    font-family: "Times New Roman", Helvetica, Georgia;
+    font-family: "Inter", sans-serif;
     display: grid;
     justify-items: center;
     align-items: center;
     background-color: #100E20;
 }
 
+h1 {
+    font-weight: 300;
+}
+
 #main-holder {
-    width: 40%;
+    width: 45%;
     height: 60%;
     display: grid;
     justify-items: center;
@@ -63,13 +67,13 @@ body {
     border: none;
     border-bottom: 1px solid #100E20;
     margin-bottom: 20px;
-    border-radius: 2px;
+    /*border-radius: 2px;*/
     outline: none;
-    padding: 0px 0px 5px 10px;
+    padding: 5px 0px 5px 10px;
 }
 
 #login-form-submit {
-    width: 50%;
+    width: 100%;
     padding: 7px;
     text-align: center;
     justify-content: center;
@@ -83,3 +87,7 @@ body {
     cursor: pointer;
     outline: none;
 }
+
+#login-form-submit:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
