--- a/main.css
+++ b/main.css
@@ -28,6 +28,40 @@ body {
     font-size: 20px;
 }
 
+.button {
+    border: none;
+    padding: 5px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.button.sign-up {
+    width: 100%;
+    background-color: #fff;
+    color: #000;
+    display: inline-block;
+    transition: 0.5s;
+}
+
+.button.sign-up:hover {
+    background-color: #252627;
+    color: #fff;
+    transition: 0.5s;
+}
+
+.button.log-in {
+    width: 100%;
+    background-color: #0177FF;
+    color: #fff;
+    display: inline-block;
+    transition: 0.5s;
+}
+
+.button.log-in:hover {
+    background-color: #055AC1;
+    transition: 0.5s;
+}
 
 .topnav {
     overflow: hidden;
@@ -35,24 +69,13 @@ body {
     align-content: center;
 }
 
-.topnav a.bar {
-    color: #055AC1;
-    float: right;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 18px;
-}
-
-li {
+.topnav li.bar {
     list-style-type: none;
-    float: right;
-}
-
-.topnav a.bar:hover {
-    background-color: #EDD109;
+    width: 6.5%;
     color: #055AC1;
-
+    float: right;
+    align-items: center;
+    padding: 16px 18px 0px 5px;
 }
 
 .topnav a.b {
