--- a/authstyles.css
+++ b/authstyles.css
@@ -16,9 +16,7 @@ h1 {
     font-weight: 300;
 }
 
-#main-holder {
-    width: 30%;
-    height: 60%;
+.main-holder {
     display: grid;
     justify-items: center;
     align-items: center;
@@ -27,7 +25,17 @@ h1 {
     box-shadow: 0px 0px 10px 2px #0177FF;
 }
 
-#login-error-msg-holder {
+.main-holder.login {
+    width: 30%;
+    height: 60%;
+}
+
+.main-holder.signup {
+    width: 40%;
+    height: 65%;
+}
+
+#error-msg-holder {
     width: 100%;
     height: 100%;
     display: grid;
@@ -35,7 +43,7 @@ h1 {
     align-items: center;
 }
 
-#login-error-msg {
+#error-msg {
     width: 50%;
     text-align: center;
     margin: 0;
@@ -52,30 +60,29 @@ h1 {
     display: block;
 }
 
-#login-form {
+#form-body {
     align-self: flex-start;
     display: grid;
     justify-items: center;
     align-items: center;
 }
 
-.login-form-field::placeholder {
+.form-field::placeholder {
     font-family: Archivo, sans-serif;
     color: #000;
 }
 
-.login-form-field {
+.form-field {
     border: none;
     border-bottom: 1px solid #100E20;
-    margin-bottom: 20px;
-    /*border-radius: 2px;*/
+    margin-bottom: 15px;
     outline: none;
-    padding: 5px 0px 5px 10px;
+    padding: 5px 0px 4px 10px;
 }
 
-#login-form-submit {
+#form-submit {
     width: 100%;
-    padding: 7px;
+    padding: 9px;
     text-align: center;
     justify-content: center;
     border: none;
@@ -89,6 +96,6 @@ h1 {
     outline: none;
 }
 
-#login-form-submit:hover {
+#form-submit:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
