--- a/webpages/windows.css
+++ b/webpages/windows.css
@@ -19,7 +19,6 @@
 
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
     background-color: #100E20;
 }
 
@@ -51,7 +50,17 @@ li {
 .topnav a.bar:hover {
     background-color: #EDD109;
     color: #055AC1;
+    transition: .5s;
+}
 
+.logo {
+    float: left;
+    vertical-align: top;
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+    margin-top: 5px;
+    cursor: pointer;
 }
 
 .topnav a.b {
@@ -61,4 +70,35 @@ li {
     padding: 18px 18px;
     text-decoration: none;
     font-size: 18px;
+}
+
+.button {
+    float: left;
+    background-color: #055AC1;
+    border: none;
+    color: #055AC1;
+    padding: 18px 18px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 100%;
+    margin: 0;
+    transition: 0.5s;
+    cursor: pointer;
+}
+    
+.logoutbutton {
+    background-color: #000; 
+    color: #0177FF;
+    border: 2px solid #000;
+    padding: 18px 20px;
+    font-family: Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+}
+    
+.logoutbutton:hover {
+    background-color: #EDD109;
+    color: #055AC1;
+    transition: 0.5s;
 }
