--- a/main.css
+++ b/main.css
@@ -28,6 +28,17 @@ body {
     font-size: 20px;
 }
 
+.logo {
+    float: left;
+    align-self: center;
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    margin-right: -10px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
 .button {
     border: none;
     padding: 5px;
