--- a/webpages/windows.css
+++ b/webpages/windows.css
@@ -107,3 +107,43 @@ li {
     color: #055AC1;
     transition: 0.5s;
 }
+
+.mainpage {
+    float: left;
+    vertical-align: top;
+    width: 100%;
+    height: 100%;
+    margin-left: 0px;
+    margin-top: 50px;
+    cursor: pointer;
+}
+
+.questions {
+    float: left;
+    vertical-align: top;
+    width: 100%;
+    height: 100%;
+    margin-left: 0px;
+    margin-top: 50px;
+    cursor: pointer;
+}
+
+.achievements {
+    float: left;
+    vertical-align: top;
+    width: 100%;
+    height: 100%;
+    margin-left: 0px;
+    margin-top: 50px;
+    cursor: pointer;
+}
+
+.profile {
+    float: left;
+    vertical-align: top;
+    width: 100%;
+    height: 100%;
+    margin-left: 0px;
+    margin-top: 50px;
+    cursor: pointer;
+}
